MCPODS-7112: review comments fixes